messaging_app/messaging_app/kubeservice.yaml
# ==============================================================================
# File: kubeservice.yaml
# Objective: Define the service that routes traffic to either the blue or green deployment.
# ==============================================================================

apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    version: blue #initial version
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
